--- a/Microservices/docker-compose.yml
+++ b/Microservices/docker-compose.yml
@@ -63,3 +63,12 @@ services:
                 <<: *shared_environment
         expose:
             - '5432'
+    bogusapp-microservices-debugdatabase:
+        image: postgres:12-alpine
+        environment:
+            PGDATA: /var/lib/postgresql/data/pgdata
+            POSTGRES_USER: vapor_username
+            POSTGRES_PASSWORD: vapor_password
+            POSTGRES_DB: vapor_database
+        ports:
+            - '5432:5432'
