--- a/Microservices/docker-compose.yml
+++ b/Microservices/docker-compose.yml
@@ -44,27 +44,24 @@ services:
     db-targets:
         image: postgres:12-alpine
         environment:
-                <<: *shared_environment
-        expose:
-            - '5432'
+            <<: *shared_environment
+        ports:
+            - '5632:5432'
     db-channels:
         image: postgres:12-alpine
         environment:
-                <<: *shared_environment
-        expose:
-            - '5432'
+            <<: *shared_environment
+        ports:
+            - '5532:5432'
     db-benefits:
         image: postgres:12-alpine
         environment:
-                <<: *shared_environment
-        expose:
-            - '5432'
+            <<: *shared_environment
+        ports:
+            - '5732:5432'
     bogusapp-microservices-debugdatabase:
         image: postgres:12-alpine
         environment:
-            PGDATA: /var/lib/postgresql/data/pgdata
-            POSTGRES_USER: vapor_username
-            POSTGRES_PASSWORD: vapor_password
-            POSTGRES_DB: vapor_database
+            <<: *shared_environment
         ports:
             - '5432:5432'
