Add watchos fct

--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,9 @@
 [submodule "Features/BogusApp-Features-PlansList"]
 	path = Features/BogusApp-Features-PlansList
 	url = https://github.com/mariusjcb/BogusApp-Features-PlansList.git
+[submodule "BogusApp-WatchOS"]
+	path = BogusApp-WatchOS
+	url = https://github.com/mariusjcb/BogusApp-WatchOS.git
+[submodule "Features/BogusApp-Features-CampaignReview"]
+	path = Features/BogusApp-Features-CampaignReview
+	url = https://github.com/mariusjcb/BogusApp-Features-CampaignReview.git
