add workflow_dispatch trigger

--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -3,6 +3,11 @@ on:
   pull_request:
     branches:
     - master
+  workflow_dispatch:
+    inputs:
+      newUnityVersion:
+        description: 'Run tests...'
+        required: true
 jobs:
   test:
     name: Testing Networking and iOS app
