Run dispatch on master

--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -4,10 +4,8 @@ on:
     branches:
     - master
   workflow_dispatch:
-    inputs:
-      newUnityVersion:
-        description: 'Run tests...'
-        required: true
+    branches:
+    - master
 jobs:
   test:
     name: Testing Networking and iOS app
